# raft-consensus-poc

./: Cargo.toml  README.md  debug_dashboard.html  raft-protocol-plan-poc.md  test_frontend_events.js  test_script_loading.js  test_websocket.html  todo.json  todo.json.backup
src/: main.rs  raft.rs
src/raft/: algorithm.rs  core.rs  events.rs  integration_tests.rs  rpc.rs  simulation.rs  tests.rs  websocket.rs
web/: README.md  app-v2.js  app.js  clean-app.js  clean-styles.css  dashboard.js  index.html  raft-message-classifier.js  raft-visualization-v2.js  styles.css  visualization.js  websocket-manager.js  websocket.js
